Bug 450863 - Adding Folders to Filelight's "Do Not Scan List" Doesn't Omit Them From Scan Results on Windows
Summary: Adding Folders to Filelight's "Do Not Scan List" Doesn't Omit Them From Scan ...
Status: RESOLVED FIXED
Alias: None
Product: filelight
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.12.0
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Martin Sandsmark
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-02-26 07:56 UTC by nekonexus
Modified: 2022-02-28 09:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Scan Results and "Do Not Scan List" Screenshot (332.59 KB, image/png)
2022-02-26 07:56 UTC, nekonexus
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nekonexus 2022-02-26 07:56:47 UTC
Created attachment 147134 [details]
Scan Results and "Do Not Scan List" Screenshot

SUMMARY
Adding folders to the "Do Not Scan" list doesn't prevent selected folders from being scanned in Filelight.

STEPS TO REPRODUCE
1. Download Filelight from the Microsoft Store (as indicated by the KDE Product page: https://apps.kde.org/filelight/ )
2. Open Filelight
3. Add "C:\Windows" to the "Do Not Scan List"
4. Re-scan "C:\"

OBSERVED RESULT
"C:\Windows" is included in Filelight's scan results

EXPECTED RESULT
"C:\Windows" should have been omitted from Filelight's scan results

SOFTWARE/OS VERSIONS
Windows: Windows 10 Home (Version	10.0.19042 Build 19042)
KDE Frameworks Version: 5.88.0
Qt Version: 5.15.2 (built against 5.15.2)

ADDITIONAL INFORMATION
Comment 1 Harald Sitter 2022-02-28 09:29:02 UTC
Git commit 28c4a2852a7d9f07474ca16e3f6a769b674f106e by Harald Sitter.
Committed on 28/02/2022 at 09:28.
Pushed by sitter into branch 'master'.

do not confuse portable seperator with native ones

url.toLocalFile returns C:/ so we incorrectly turned that into C:/\\
i.e. C:// in portable speak. this then resulted in the filtering in
locallister not working because it's doing a startsWith check between
the ignore (e.g. C:/Windows) and the incoming path (e.g. C:/\\) that
would naturally fail.

so, to fix this we'll simply want to stop using qdir::separator

M  +12   -2    src/scan.cpp

https://invent.kde.org/utilities/filelight/commit/28c4a2852a7d9f07474ca16e3f6a769b674f106e